--- a/GPU_version_TPU_U_Net_Cup_Disc_Segmentation.ipynb
+++ b/GPU_version_TPU_U_Net_Cup_Disc_Segmentation.ipynb
@@ -162,15 +162,12 @@
     {
       "metadata": {
         "id": "RDyFVtSMqZ3P",
-        "colab_type": "code",
-        "colab": {}
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "Check copy"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "metadata": {
@@ -843,7 +840,7 @@
       "source": [
         "\n",
         "arch_name='GPU'\n",
-        "weights_folder = os.path.join(os.path.dirname(os.getcwd()), 'models_weights', arch_name))\n",
+        "weights_folder = os.path.join(os.path.dirname(os.getcwd()), 'models_weights', arch_name)\n",
         "\n",
         "def folder(folder_name):\n",
         "    if not os.path.exists(folder_name):\n",
